# fastzip

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  benchmark.cpp  fastzip.keystore  test.py
src/: CLI11.hpp  LICENSE  asn.cpp  asn.h  crypto.cpp  crypto.h  fastzip.cpp  fastzip.h  fastzip_keystore.cpp  file.h  funzip.cpp  funzip.h  inflate.cpp  inflate.h  infozip.cpp  main.cpp  sign.cpp  sign.h  test.cpp  utils.cpp  utils.h  ziparchive.cpp  ziparchive.h  zipformat.h  zipstream.cpp  zipstream.h
src/crc32/: Crc32.cpp
src/igzip/: Makefile  crc_pcl.asm  data_struct2.asm  huffman.asm  igzip0c_body.asm  igzip0c_finish.asm  igzip1c_body.asm  igzip1c_finish.asm  init_stream.asm  options.h  options.inc  os.h
src/igzip/c_code/: bitbuf2.h  common.cpp  crc_utils.asm  igzip_lib.h
src/infozip/: deflate.cpp  deflate.h  tailor.h  trees.cpp  zip.h  ziperr.h  zipup.c
src/openssl/include/openssl/: opensslconf.h
